--- a/ML01_Assignment.ipynb
+++ b/ML01_Assignment.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ML01-Assignment.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyO/UkQanWIlmIzTip8kUQXl",
+      "authorship_tag": "ABX9TyMm5H9z4e5ar7cKs/2CclO7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -223,6 +223,67 @@
           "text": [
             "153\n",
             "153  is an Armstrong number.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "5. A number is called Harshad number (also called Niven number) if the number is divisible by the sum of its digits. \n",
+        "For example, 210 is a Harshad number because 210 is divisible by the sum of its digits (2 + 1 + 0 = 3). Write a \n",
+        "program which will print the first 10 Harshad numbers with n-digits. The number n will be known at the time of \n",
+        "running your program. "
+      ],
+      "metadata": {
+        "id": "0e5TvgoB9mHS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def isNiven(n):\n",
+        "  k=n\n",
+        "  sum=0\n",
+        "  while k>0:\n",
+        "    sum+=k%10\n",
+        "    k=int(k/10)\n",
+        "  return n%sum==0\n",
+        "\n",
+        "n=int(input())\n",
+        "c=0\n",
+        "a=10**(n-1)\n",
+        "max=9**n\n",
+        "while c<10 and a<=max:\n",
+        "  if isNiven(a) :\n",
+        "    print(a)\n",
+        "    c+=1\n",
+        "  a+=1"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cVOxbiiG9mwx",
+        "outputId": "ab9372d7-a297-40db-a872-dab1e2fbbec6"
+      },
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "10\n",
+            "12\n",
+            "18\n",
+            "20\n",
+            "21\n",
+            "24\n",
+            "27\n",
+            "30\n",
+            "36\n",
+            "40\n"
           ]
         }
       ]
