--- a/ML04_Lab.ipynb
+++ b/ML04_Lab.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN6QrM5DriSjAt11A/cIkm1",
+      "authorship_tag": "ABX9TyPIUhJhBQVS3ICBL7Vwy49n",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -272,7 +272,7 @@
         "  \n",
         "# function that returns correlation coefficient.\n",
         "def correlationCoefficient(X, Y, n) :\n",
-        "    sum_XY = 0\n",
+        "    Covarriant = 0\n",
         "    squareSum_X = 0\n",
         "    squareSum_Y = 0\n",
         "\n",
@@ -282,7 +282,7 @@
         "    i = 0\n",
         "    while i < n :     \n",
         "        # sum of X[i]-mean_X * Y[i]-mean_Y.\n",
-        "        sum_XY = sum_XY + (X[i]-mean_X) * (Y[i]-mean_Y)\n",
+        "        Covarriant = Covarriant + (X[i]-mean_X) * (Y[i]-mean_Y)\n",
         "          \n",
         "        # sum of square of array elements.\n",
         "        squareSum_X = squareSum_X + (X[i]-mean_X) * (X[i]-mean_X)\n",
@@ -292,13 +292,13 @@
         "       \n",
         "    # use formula for calculating correlation \n",
         "    # coefficient.\n",
-        "    corr = (float)(sum_XY)/(float)(math.sqrt(squareSum_X*squareSum_Y))\n",
+        "    corr = (float)(Covarriant)/(float)(math.sqrt(squareSum_X*squareSum_Y))\n",
         "    return corr"
       ],
       "metadata": {
         "id": "WYXfraXFeuMU"
       },
-      "execution_count": 22,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -318,9 +318,9 @@
           "height": 272
         },
         "id": "mqZ6eSOIgMar",
-        "outputId": "197bee75-bf34-4912-d67c-66ac7768b4fd"
+        "outputId": "838841e9-1395-409d-e98f-4fcfb69fa3e3"
       },
-      "execution_count": 38,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +344,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7837cb7b-8c49-4b6d-b237-362514be0083\">\n",
+              "  <div id=\"df-1b08fc6b-0682-4085-9489-242e8af3f79b\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -430,7 +430,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7837cb7b-8c49-4b6d-b237-362514be0083')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1b08fc6b-0682-4085-9489-242e8af3f79b')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -481,12 +481,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7837cb7b-8c49-4b6d-b237-362514be0083 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1b08fc6b-0682-4085-9489-242e8af3f79b button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7837cb7b-8c49-4b6d-b237-362514be0083');\n",
+              "          const element = document.querySelector('#df-1b08fc6b-0682-4085-9489-242e8af3f79b');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -509,7 +509,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 41
         }
       ]
     }
