--- a/ML02Assignment.ipynb
+++ b/ML02Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4eHEpaOiITV7tCks7rocT",
+      "authorship_tag": "ABX9TyMJkxHJY+Cd1GvxThcB1pYi",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -256,7 +256,7 @@
         "id": "CJ6CNqsCT-r1",
         "outputId": "77994916-cfd7-448c-ca4e-060fcf510f61"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -298,7 +298,7 @@
         "id": "S_gAr8DnGcXl",
         "outputId": "0f97b1c4-f07a-425e-88b4-1373dcc3654a"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -362,7 +362,7 @@
         "id": "hBt3PUcRU18y",
         "outputId": "bb7886d0-0754-4eec-874d-73a48bf66c03"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -416,7 +416,7 @@
         "id": "bRCvsOv_f0h4",
         "outputId": "3c4936b8-5ce8-41c1-ab41-1703dfb4b05c"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -429,6 +429,47 @@
             " [0. 1. 0. 0.]\n",
             " [0. 2. 3. 0.]\n",
             " [0. 0. 0. 0.]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Question 6: \n",
+        "Create a n*n 2D array with random values, such that the values are drawn from a gaussian distribution, using numpy. Compute row-wise mean, column-wise mean and the mean of the entire matrix using numpy and print the outputs. Also compute the row-wise and column-wise standard deviation and print the outputs.\n"
+      ],
+      "metadata": {
+        "id": "i7qDy78ZFypi"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "n = int(input(\"n: \"))\n",
+        "matrix = np.random.normal( size=(n, n))\n",
+        "print(matrix)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "f7bX-L1lF6iz",
+        "outputId": "96d7c330-8836-48eb-dae6-0a89dc90005a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "n: 5\n",
+            "[[ 0.97484451 -2.56224971  2.76101674  0.5254237   2.6747351 ]\n",
+            " [ 0.70847896  1.86289871 -3.23074956  1.50579059 -0.89161094]\n",
+            " [ 0.29417771  0.40058265  0.81947424  1.09960639  0.66296364]\n",
+            " [-1.09929883 -1.72253988  0.12498056 -0.69446018 -0.54795019]\n",
+            " [-0.64469767 -0.28100174  0.67491912  0.80075942 -0.16802187]]\n"
           ]
         }
       ]
